--- a/translations/dragoncurse_castle.tex/cs.po
+++ b/translations/dragoncurse_castle.tex/cs.po
@@ -175,7 +175,7 @@ msgid ""
 "This Scenario is played over a maximum of 11 Rounds.\n"
 "\n"
 msgstr ""
-"Tento scénář se hraje na nejvýše 11 Kol.\n"
+"Tento Scénář se hraje na nejvýše 11 Kol.\n"
 "\n"
 
 #. type: multicols*
@@ -277,7 +277,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"  \\textbf{4. a 8. kolo:}\n"
+"  \\textbf{4. a 8. Kolo:}\n"
 "\\begin{itemize}\n"
 "  \\item Odstraňte všechny Černé Kostičky z Vodních Kol a Větrných Mlýnů na mapě.\n"
 "  \\item Všichni Hrdinové získávají +1 \\svg{movement}\n"
@@ -317,7 +317,7 @@ msgstr ""
 "      \\item Umístění Hlavního Hrdiny po jeho porážce.\n"
 "      \\item Dočasnému transportu armády za 8~\\svg{gold}, když je Náhodné Město napadeno.\n"
 "    \\end{itemize}\n"
-"  \\item První hráč, který navštíví Dračí Utopii (po porážce bránící jednotky Azurového draka), dobere karty z Balíčku Neutrálních Jednotek \\svgunit{azure}, dokud nebude nalezen Drak, který není spojený s žádnou Frakcí.\n"
+"  \\item První hráč, který navštíví Dračí Utopii (po porážce bránící Jednotky Azurového draka), dobere karty z Balíčku Neutrálních Jednotek \\svgunit{azure}, dokud nebude nalezen Drak, který není spojený s žádnou Frakcí.\n"
 "    Hráč může okamžitě tohoto Draka zdarma Naverbovat.\n"
 "\\end{itemize}\n"
 "\n"
