--- a/translations/emerald_island.tex/cs.po
+++ b/translations/emerald_island.tex/cs.po
@@ -144,7 +144,7 @@ msgid ""
 "Take the following Map Tiles and arrange them as shown in the Scenario map layout ($P$ stands for the number of players):\n"
 "\n"
 msgstr ""
-"Vezměte následující Dílky Mapy a uspořádejte je, jak je uvedeno ve scénáři ($H$ znamená počet hráčů):\n"
+"Vezměte následující Dílky Mapy a uspořádejte je, jak je uvedeno ve Scénáři ($H$ znamená počet hráčů):\n"
 "\n"
 
 #.  !TeX spellcheck = en_US
@@ -241,7 +241,7 @@ msgid ""
 "\\textbf{Map Tile Pool:} If you wish, you can distribute the II--III Tiles equally to each player rather than laying them out as proposed.\n"
 "\n"
 msgstr ""
-"\\textbf{Dílky Mapy na ruce:} Pokud si přejete, můžete Dílky II--III rozdělit rovnoměrně mezi každého hráče, místo aby byly rozmístěny podle návrhu ve scénáři.\n"
+"\\textbf{Dílky Mapy na ruce:} Pokud si přejete, můžete Dílky II--III rozdělit rovnoměrně mezi každého hráče, místo aby byly rozmístěny podle návrhu ve Scénáři.\n"
 "\n"
 
 #. type: multicols*
@@ -289,7 +289,7 @@ msgid ""
 "There are unflagged Mines or Settlements left in map at the end of Round 8.\n"
 "\n"
 msgstr ""
-"Na konci 8. kola zůstanou na mapě neobsazené Doly nebo Osady.\n"
+"Na konci 8. Kola zůstanou na mapě neobsazené Doly nebo Osady.\n"
 "\n"
 
 #. type: multicols*
@@ -302,7 +302,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{5. kolo:}\n"
+"\\textbf{5. Kolo:}\n"
 "\\begin{itemize}\n"
 "  \\item Získejte znovu výsledek jednoho Pole s Černou Kostičkou.\n"
 "\\end{itemize}\n"
@@ -343,7 +343,7 @@ msgstr ""
 "        \\item Ve Městě jiného hráče.\n"
 "        \\item Vedle Hrdiny jiného hráče.\n"
 "    \\end{itemize}\n"
-"    \\item Pokud nemáte žádné Jednotky ve svém Balíčku Jednotek (po bitvě nebo pokud si neuchováte alespoň jednu Jednotku), vraťte všechny své Jednotky do balíčku Jednotek své Frakce (i když jiný hráč má jednu nebo více vašich Jednotek). To zahrnuje i Jednotky, které jste dříve předali jinému hráči.\n"
+"    \\item Pokud nemáte žádné Jednotky ve svém Balíčku Jednotek (po bitvě nebo pokud si neuchováte alespoň jednu Jednotku), vraťte všechny své Jednotky do Balíčku Jednotek své Frakce (i když jiný hráč má jednu nebo více vašich Jednotek). To zahrnuje i Jednotky, které jste dříve předali jinému hráči.\n"
 "    \\item Když jste ve Městě jiného hráče, můžete Naverbovat nebo Posílit jejich Jednotky, buď pro daného hráče nebo pro sebe. Potřebujete k tomu povolení druhého hráče, a musí k tomu být postavena odpovídající Obydlí nebo Citadela.\n"
 "    \\item Pro poslední boj o Důl/Osadu přidejte \\svgunit{golden} Neutrální Jednotku. Pro tento boj máte neomezený počet Tahů. K přeskočení tohoto boje nemůžete použít Expertní Diplomacii!\n"
 "    \\item Poprvé, když dosáhnete Úrovně IV, získáte svou druhou specializaci.\n"
