--- a/translations/inferno_deal_with_the_devil.tex/cs.po
+++ b/translations/inferno_deal_with_the_devil.tex/cs.po
@@ -226,7 +226,7 @@ msgid ""
 "During this ``Inferno'' Campaign Scenario, the following rules apply:\n"
 "\n"
 msgstr ""
-"Během tohoto scénáře kampaně \\uv{Peklo} platí následující pravidla:\n"
+"Během tohoto Scénáře Kampaně \\uv{Peklo} platí následující pravidla:\n"
 "\n"
 
 #. type: multicols*
@@ -237,7 +237,7 @@ msgid ""
 "Take the following Map Tiles and set them up as shown in the Scenario map layout:\n"
 "\n"
 msgstr ""
-"Vezměte následující Dílky Mapy a uspořádejte je, jak je uvedeno ve scénáři:\n"
+"Vezměte následující Dílky Mapy a uspořádejte je, jak je uvedeno ve Scénáři:\n"
 "\n"
 
 #.  !TeX spellcheck = en_US
@@ -451,7 +451,7 @@ msgid ""
 "Charging Armies \\#1 and \\#2 use the same AI Deck and Skill Deck. Reshuffle both Decks after Combat.\n"
 "\n"
 msgstr ""
-"Útočící Armády \\#1 a \\#2 používají stejný AI balíček a balíček Schopností. Po boji oba balíčky zamíchejte.\n"
+"Útočící Armády \\#1 a \\#2 používají stejný AI Balíček a Balíček Schopností. Po boji oba Balíčky zamíchejte.\n"
 "\n"
 
 #. type: multicols*
@@ -649,7 +649,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{1. kolo:}\n"
+"\\textbf{1. Kolo:}\n"
 "\\begin{itemize}\n"
 "  \\item Přečtěte: \\uv{Královna Catherine odmítá naši žádost o výkupné a shromažďuje armády pro záchrannou\n"
 "    operaci. Klane Kreelah, připravte naši obranu! Chraňte Kleesiv za každou cenu. Máme výhodu.}\n"
@@ -676,7 +676,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{2. kolo:}\n"
+"\\textbf{2. Kolo:}\n"
 "\\begin{itemize}\n"
 "  \\item Přečtěte: \\uv{Armády Hradu a AvLee budou brzy u našich bran. Musí projít přes vulkanický koridor\n"
 "    na našem východě. Nemůžeme se s nimi setkat v bitvě na otevřeném poli, musíme se bránit uvnitř Kleesivu, na této prokleté zemi, kde\n"
@@ -695,7 +695,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{3. kolo:}\n"
+"\\textbf{3. Kolo:}\n"
 "\\begin{itemize}\n"
 "  \\item Přečtěte: \\uv{Naši zvědové hlásí, že nepřítel získal 2 velmi mocné artefakty s pomocí místních věštců.\n"
 "    Jsou to blázni, pokud si myslí, že jim to pomůže překonat naši Kreeganskou pevnost.}\n"
@@ -718,7 +718,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{4. kolo:}\n"
+"\\textbf{4. Kolo:}\n"
 "\\begin{itemize}\n"
 "  \\item První armády zaútočí v tomto a následujícím kole. Připravte si obranu!\n"
 "\\end{itemize}\n"
@@ -742,7 +742,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{7. kolo:}\n"
+"\\textbf{7. Kolo:}\n"
 "\\begin{itemize}\n"
 "  \\item Nepřátelský Útočící Hrdina Hradu \\#2 se objeví na poli Osady dílku F3 nebo na středovém poli Startovního dílku S3.\n"
 "  \\item Nepřátelský Útočící Hrdina Bašty \\#2 se objeví na středovém poli Startovního dílku S4.\n"
@@ -766,7 +766,7 @@ msgid ""
 "\n"
 msgstr ""
 "\\columnbreak\n"
-"\\textbf{10. kolo:}\n"
+"\\textbf{10. Kolo:}\n"
 "\\begin{itemize}\n"
 "  \\item Druhé armády zaútočí v tomto a následujícím kole. Připravte si obranu!\n"
 "\\end{itemize}\n"
@@ -788,9 +788,9 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{12. kolo:}\n"
+"\\textbf{12. Kolo:}\n"
 "\\begin{itemize}\n"
-"  \\item Finální Útočící Nepřátelská Armáda se objeví na poli Osady dílku F3. Tato armáda má 4 BP na kolo.\n"
+"  \\item Finální Útočící Nepřátelská Armáda se objeví na poli Osady dílku F3. Tato armáda má 4 BP na Kolo.\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -810,7 +810,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{16. kolo:}\n"
+"\\textbf{16. Kolo:}\n"
 "\\begin{itemize}\n"
 "  \\item Finální Útočící Armáda zaútočí v tomto kole. Musíme za každou cenu udržet Kleesiv!\n"
 "\\end{itemize}\n"
@@ -832,7 +832,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{Když dokončíte scénář:}\n"
+"\\textbf{Když dokončíte Scénář:}\n"
 "\\begin{itemize}\n"
 "  \\item Přečtěte: \\uv{Gratulujeme! Ubránili jste Kleesiv a zvítězili jste!}\n"
 "\\end{itemize}\n"
