--- a/translations/inferno_devilish_plan.tex/cs.po
+++ b/translations/inferno_devilish_plan.tex/cs.po
@@ -77,7 +77,7 @@ msgid ""
 "Take the following Map Tiles and arrange them as shown in the Scenario map layout:\n"
 "\n"
 msgstr ""
-"Vezměte následující Dílky Mapy a uspořádejte je, jak je uvedeno ve scénáři:\n"
+"Vezměte následující Dílky Mapy a uspořádejte je, jak je uvedeno ve Scénáři:\n"
 "\n"
 
 #. type: multicols*
@@ -384,7 +384,7 @@ msgid ""
 "\\textbf{Ivor's Spell Deck:} 1 × Precision Spell card (it resolves on the first \\svg{unit_ranged} Unit able to make a \\svg{unit_ranged} attack), 1 × Magic Arrow Spell card\n"
 "\n"
 msgstr ""
-"\\textbf{Ivorův Balíček Kouzel:} 1 × karta Kouzla Přesnosti (je použita na první \\svg{unit_ranged} jednotku schopnou útoku na dálku), 1 × karta Kouzla Magický Šíp\n"
+"\\textbf{Ivorův Balíček Kouzel:} 1 × karta Kouzla Přesnosti (je použita na první \\svg{unit_ranged} Jednotku schopnou útoku na dálku), 1 × karta Kouzla Magický Šíp\n"
 "\n"
 
 #. type: multicols*
@@ -559,7 +559,7 @@ msgid ""
 "You fail to defeat the Enemy Hero and the Gold Dragon Armies by the end of the Round 13.\n"
 "\n"
 msgstr ""
-"Nepodaří se vám porazit Nepřátelského Hrdinu a Armády Zlatých Draků do konce 13. kola.\n"
+"Nepodaří se vám porazit Nepřátelského Hrdinu a Armády Zlatých Draků do konce 13. Kola.\n"
 "\n"
 
 #. type: multicols*
@@ -575,7 +575,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{1. kolo:}\n"
+"\\textbf{1. Kolo:}\n"
 "\\begin{itemize}\n"
 "  \\item Čtěte: \\uv{Naši podřízení si vedli dobře. Podařilo se jim vztyčit sopku\n"
 "    a postavit pevnost v řídce osídleném lese těsně za hranicemi Erathie.\n"
@@ -597,7 +597,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{2. kolo:}\n"
+"\\textbf{2. Kolo:}\n"
 "\\begin{itemize}\n"
 "  \\item Čtěte: \\uv{Královna Zlatých Draků je mocnou spojenkyní AvLee.\n"
 "    Musíte najít její doupě a zajistit její zánik, protože to výrazně oslabí\n"
@@ -617,7 +617,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{9. kolo:}\n"
+"\\textbf{9. Kolo:}\n"
 "\\begin{itemize}\n"
 "  \\item Málo Elfů z Ivorovy Armády je Posíleno na skupinu Elfů.\n"
 "    Ivorova Armáda také získává Vozík s Municí.\n"
@@ -634,7 +634,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{10. kolo:}\n"
+"\\textbf{10. Kolo:}\n"
 "\\begin{itemize}\n"
 "  \\item Město Frakce Bašta, ve kterém sídlí Ivorova Armáda, získává Střílnu.\n"
 "\\end{itemize}\n"
@@ -656,9 +656,9 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{13. kolo:}\n"
+"\\textbf{13. Kolo:}\n"
 "\\begin{itemize}\n"
-"  \\item Na konci kola, pokud nejsou Nepřátelský Hrdina a Armády Zlatých Draků poraženi, je vše ztraceno -- prohráváte!\n"
+"  \\item Na konci Kola, pokud nejsou Nepřátelský Hrdina a Armády Zlatých Draků poraženi, je vše ztraceno -- prohráváte!\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -678,7 +678,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{Když dokončíte scénář:}\n"
+"\\textbf{Když dokončíte Scénář:}\n"
 "\\begin{itemize}\n"
 "  \\item Čtěte: \\uv{Gratulujeme! Dokončili jste svůj úkol zabít obávanou bestii zvítězili jste!}\n"
 "\\end{itemize}\n"
@@ -693,7 +693,7 @@ msgid ""
 "During this ``Inferno'' Campaign Scenario, the following rules apply:\n"
 "\n"
 msgstr ""
-"Během tohoto scénáře kampaně \\uv{Peklo} platí následující pravidla:\n"
+"Během tohoto Scénáře Kampaně \\uv{Peklo} platí následující pravidla:\n"
 "\n"
 
 #. type: multicols*
@@ -726,7 +726,7 @@ msgstr ""
 "    \\item Na Dílek Mapy N7 nelze vstoupit, dokud není Ivor poražen.\n"
 "    \\item Na lokaci Dračí Utopie bojuje váš Hrdina s Armádou Zlatých Draků.\n"
 "    \\item \\uv{Hradní Bránu} nelze postavit.\n"
-"    \\item Pokud váš Hrdina navštíví Obelisk, můžete Hledat (2) v balíčku Dovedností, Artefaktů nebo Kouzel.\n"
+"    \\item Pokud váš Hrdina navštíví Obelisk, můžete Hledat (2) v Balíčku Dovedností, Artefaktů nebo Kouzel.\n"
 "\\end{itemize}\n"
 "\n"
 
