--- a/translations/inferno_steadwicks_fall.tex/cs.po
+++ b/translations/inferno_steadwicks_fall.tex/cs.po
@@ -204,7 +204,7 @@ msgid ""
 "During this ``Inferno'' Campaign Scenario, the following rules apply:\n"
 "\n"
 msgstr ""
-"Během tohoto scénáře kampaně \\uv{Peklo} platí následující pravidla:\n"
+"Během tohoto Scénáře Kampaně \\uv{Peklo} platí následující pravidla:\n"
 "\n"
 
 #.  !TeX spellcheck = en_US
@@ -431,7 +431,7 @@ msgid ""
 "Take the following Map Tiles and set them up as shown in the Scenario map layout:\n"
 "\n"
 msgstr ""
-"Vezměte následující Dílky Mapy a uspořádejte je, jak je uvedeno ve scénáři:\n"
+"Vezměte následující Dílky Mapy a uspořádejte je, jak je uvedeno ve Scénáři:\n"
 "\n"
 
 #. type: multicols*
@@ -572,7 +572,7 @@ msgid ""
 "\n"
 msgstr ""
 "Poražte všechny 3 nepřáteli ovládané Osady (F3, F10, \\#F1) a dobyjte Steadwick (S3) dříve,\n"
-"než dorazí královna Catherine Ironfist na konci 16. kola.\n"
+"než dorazí královna Catherine Ironfist na konci 16. Kola.\n"
 "\n"
 
 #. type: multicols*
@@ -602,7 +602,7 @@ msgid ""
 "You run out of time -- you have time till the end of the Round 16.\n"
 "\n"
 msgstr ""
-"Vyprší vám čas -- máte čas do konce 16. kola.\n"
+"Vyprší vám čas -- máte čas do konce 16. Kola.\n"
 "\n"
 
 #. type: multicols*
@@ -617,7 +617,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{1. kolo:}\n"
+"\\textbf{1. Kolo:}\n"
 "\\begin{itemize}\n"
 "  \\item Čtěte: \\uv{Blahopřejeme vám k dosavadnímu pokroku.\n"
 "    Zpustošili jste východní Erathii a nyní jste na dosah erathijského\n"
@@ -636,7 +636,7 @@ msgid ""
 "    garrisons before she arrives.\n"
 "\n"
 msgstr ""
-"\\textbf{2. kolo:}\n"
+"\\textbf{2. Kolo:}\n"
 "\\begin{itemize}\n"
 "  \\item Čtěte: \\uv{Nejenže Bracada a AvLee poslali posily, ale dostali jsme zprávy, že\n"
 "    královna Catherine Ironfist pochoduje s početnou armádou z jihu. Musíme ovládnout hlavní město a jeho\n"
@@ -671,7 +671,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{5. kolo:}\n"
+"\\textbf{5. Kolo:}\n"
 "\\begin{itemize}\n"
 "  \\item Čtěte: \\uv{Obdrželi jste zprávu z jihu. Síly královny Catherine byly dostatečně zdrženy,\n"
 "    což vám poskytuje nejméně dva měsíce navíc k dosažení hlavního města, ale naše vlastní síly utrpěly značné\n"
@@ -690,7 +690,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{10. kolo:}\n"
+"\\textbf{10. Kolo:}\n"
 "\\begin{itemize}\n"
 "  \\item Za každou Nepřátelskou Osadu (F3, F10, \\#F1), která nebyla poražena, se na začátku tohoto Kola\n"
 "    objeví v každé takové Osadě další Útočící Hrdina této Frakce.\n"
@@ -709,7 +709,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{11. kolo:}\n"
+"\\textbf{11. Kolo:}\n"
 "\\begin{itemize}\n"
 "  \\item Čtěte: \\uv{Obdrželi jste zprávu z jihu. Naše síly se nadále vrhají do cesty armádám královny Catherine,\n"
 "    ale ona stále pochoduje na sever. Máte nanejvýš tři nebo čtyři týdny,\n"
@@ -728,7 +728,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{13. kolo:}\n"
+"\\textbf{13. Kolo:}\n"
 "\\begin{itemize}\n"
 "  \\item Varování: \\uv{Pochod královny Catherine pokračuje -- její síly jsou jen dva týdny daleko. Pokud si nepospíšíte,\n"
 "    nebudeme mít čas zabezpečit hlavní město před jejím příjezdem.}\n"
@@ -746,7 +746,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{15. kolo:}\n"
+"\\textbf{15. Kolo:}\n"
 "\\begin{itemize}\n"
 "  \\item Varování: \\uv{Vaši zvědové hlásí, že spatřili armádu královny Catherine sedm dní na jihozápad. Pokud\n"
 "    dorazí do hlavního města před vámi, je vše ztraceno.}\n"
@@ -765,7 +765,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{16. kolo:}\n"
+"\\textbf{16. Kolo:}\n"
 "\\begin{itemize}\n"
 "  \\item Pokud Steadwick nebyl dobyt, čtěte: \\uv{Dnes ráno dorazila do erathijského hlavního města Steadwick\n"
 "    obrovská armáda vedená královnou Catherine Ironfist. Nemáme jinou možnost než stáhnout naše síly.\n"
