--- a/translations/recommendations.tex/cs.po
+++ b/translations/recommendations.tex/cs.po
@@ -127,7 +127,7 @@ msgid ""
 "Your expected minimal play time would be around 3 hours.\n"
 "\n"
 msgstr ""
-"Například pokud hrajete scénář pro 3 hráče skládající se z 12 kol, můžete snadno vypočítat, že $3 \\times 12 \\times 5 = 180$.\n"
+"Například pokud hrajete Scénář pro 3 hráče skládající se z 12 kol, můžete snadno vypočítat, že $3 \\times 12 \\times 5 = 180$.\n"
 "Vaše očekávaná minimální herní doba bude kolem 3 hodin.\n"
 "\n"
 
@@ -220,7 +220,7 @@ msgid ""
 "During Combat with Neutral Units in clash Scenarios, if a player decides to deploy their Units only on one half (left or right) of the battle Board, the player positioning the Neutral Units must do the same.\n"
 "\n"
 msgstr ""
-"Pokud se během boje s Neutrálními Jednotkami ve scénářích Střet hráč rozhodne umístit své Jednotky pouze na jednu polovinu (levou nebo pravou) Desky Bojiště, hráč umisťující Neutrální Jednotky musí udělat totéž.\n"
+"Pokud se během boje s Neutrálními Jednotkami ve Scénářích Střet hráč rozhodne umístit své Jednotky pouze na jednu polovinu (levou nebo pravou) Desky Bojiště, hráč umisťující Neutrální Jednotky musí udělat totéž.\n"
 "\n"
 
 #. type: multicols
@@ -387,7 +387,7 @@ msgid ""
 msgstr ""
 "\\begin{itemize}\n"
 "  \\item Při rozhodování, kterou budovu postavit ve vašem městě, zejména na začátku hry, je \\textit{obvykle} nejlepší upřednostnit Jednotky před Radnicí, Citadelou, Cechem Mágů nebo jinými budovami Frakce.\n"
-"  \\item Pokud si nejste jisti, které Kouzlo, Artefakt nebo Dovednost zvolit, upřednostněte ty, které vám pomohou procházet vaším balíčkem.\n"
+"  \\item Pokud si nejste jisti, které Kouzlo, Artefakt nebo Dovednost zvolit, upřednostněte ty, které vám pomohou procházet vaším Balíčkem.\n"
 "    To zahrnuje jakékoli karty, které vám umožňují dobrat karty nebo získat karty z vaší Odhazovací Hromádky.\n"
 "  \\item Snažte se vyhnout používání Bodů Pohybu vašeho Hlavního Hrdiny na akce, které může zvládnout váš Vedlejší Hrdina, jako je otáčení Dílků Mapy, návštěva Vodních Kol a podobně.\n"
 "\\end{itemize}\n"
