--- a/translations/sentinels.tex/cs.po
+++ b/translations/sentinels.tex/cs.po
@@ -161,8 +161,8 @@ msgid ""
 msgstr ""
 "\\textbf{Počáteční Jednotky:}\n"
 "\\begin{itemize}\n"
-"  \\item Skupinu \\svgunit{bronze} jednotek s \\textit{nejnižšími} náklady na Verbování\n"
-"  \\item Málo \\svgunit{bronze} jednotek s \\textit{nejvyššími} náklady na Verbování\n"
+"  \\item Skupinu \\svgunit{bronze} Jednotek s \\textit{nejnižšími} náklady na Verbování\n"
+"  \\item Málo \\svgunit{bronze} Jednotek s \\textit{nejvyššími} náklady na Verbování\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -220,7 +220,7 @@ msgid ""
 "Take the following Map Tiles and arrange them as shown in the Scenario map layout:\n"
 "\n"
 msgstr ""
-"Vezměte následující Dílky Mapy a uspořádejte je, jak je uvedeno ve scénáři:\n"
+"Vezměte následující Dílky Mapy a uspořádejte je, jak je uvedeno ve Scénáři:\n"
 "\n"
 
 #. type: multicols
@@ -326,7 +326,7 @@ msgid ""
 "An undefeated enemy army remains at the end of Round 12.\n"
 "\n"
 msgstr ""
-"Na konci 12. kola stále existuje neporažená nepřátelská armáda.\n"
+"Na konci 12. Kola stále existuje neporažená nepřátelská armáda.\n"
 "\n"
 
 #. type: multicols
@@ -367,7 +367,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{6. kolo:}\n"
+"\\textbf{6. Kolo:}\n"
 "\\begin{itemize}\n"
 "  \\item Odstraňte všechny Černé Kostičky ze všech Větrných Mlýnů, Vodních Kol a Mystických Zahrad na mapě.\n"
 "  \\item Vyvolejte nepřátelskou armádu podle níže uvedených pravidel.\n"
@@ -384,7 +384,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{7. a 8. kolo:}\n"
+"\\textbf{7. a 8. Kolo:}\n"
 "\\begin{itemize}\n"
 "  \\item Vyvolejte nepřátelskou armádu podle níže uvedených pravidel.\n"
 "\\end{itemize}\n"
@@ -400,9 +400,9 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{9. kolo:}\n"
+"\\textbf{9. Kolo:}\n"
 "\\begin{itemize}\n"
-"  \\item Opakujte Časované Události ze 6. kola.\n"
+"  \\item Opakujte Časované Události ze 6. Kola.\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -417,9 +417,9 @@ msgid ""
 "\\vspace{-0.5em}\n"
 "\n"
 msgstr ""
-"\\textbf{10. kolo:}\n"
+"\\textbf{10. Kolo:}\n"
 "\\begin{itemize}\n"
-"  \\item Opakujte Časované Události ze 7. a 8. kola.\n"
+"  \\item Opakujte Časované Události ze 7. a 8. Kola.\n"
 "\\end{itemize}\n"
 "\\vspace{-0.5em}\n"
 "\n"
@@ -542,14 +542,14 @@ msgstr ""
 "    \\item $-1$/$+1$ = Západ\n"
 "    \\item $-1$/$-1$ = Jih\n"
 "  \\end{itemize}\n"
-"  \\item V 7. a 9. kole házejte pro vyváženější rozložení pouze druhou Kostkou Útoku (K2). Pro K1 vezměte opačný výsledek hodu z předchozího kola.\n"
+"  \\item V 7. a 9. kole házejte pro vyváženější rozložení pouze druhou Kostkou Útoku (K2). Pro K1 vezměte opačný výsledek hodu z předchozího Kola.\n"
 "  Kola 8 a 10 jsou zcela náhodná.\n"
 "  \\item Pokud dílek, kde se má nepřítel objevit, ještě nebyl objeven, otočte jej a libovolně orientujte.\n"
 "  \\item Pokud je na poli, kde se nepřítel objeví, Hrdina, začne okamžitě boj.\n"
 "  \\item Nepřátelské armády se pohybují na konci každého tahu, počínaje tahem, kdy se objevily.\n"
-"  \\item Nepřátelské armády mají 3 MP za kolo.\n"
+"  \\item Nepřátelské armády mají 3 MP za Kolo.\n"
 "  \\item Nepřátelské armády se pohybují, jak je popsáno v pravidlech (str.\\,33), ale místo obsazování ničí vše, co jim stojí v cestě.\n"
-"    Umístěte černé kostky na jakékoliv Pole, kterým projdou, a od toho okamžiku považujte tato Pole za prázdná.\n"
+"    Umístěte Černé Kostičky na jakékoliv Pole, kterým projdou, a od toho okamžiku považujte tato Pole za prázdná.\n"
 "  \\item Pokud by se nepřátelský pohyb mohl ubírat různými směry, hráči rozhodnou, kterým směrem půjdou.\n"
 "\\end{itemize}\n"
 "\n"
@@ -587,7 +587,7 @@ msgid ""
 "\n"
 msgstr ""
 "\\begin{itemize}\n"
-"  \\item Boj s nepřátelskými armádami přes více než jedno bojové kolo nestojí žádné Body Pohybu.\n"
+"  \\item Boj s nepřátelskými armádami přes více než jedno bojové Kolo nestojí žádné Body Pohybu.\n"
 "  \\item Během bitvy s nepřátelskou armádou může Hrdina ustoupit kdykoliv, když se má Aktivovat přátelská Jednotka.\n"
 "    Ustupující hlavní Hrdina ztrácí všechny zbývající Body Pohybu a je vrácen do spojeneckého Města nebo Osady dle svého výběru, přičemž si ponechává všechny zbývající Jednotky.\n"
 "  \\item Ustupující sekundární Hrdinové jsou Odstraněni ze hry, ale jejich zbývající Jednotky jsou ponechány.\n"
@@ -627,9 +627,9 @@ msgid ""
 msgstr ""
 "\\begin{itemize}\n"
 "  \\item V 10. kole se objeví Armáda Bosse. Je odlišná od předchozích armád, protože je posílena z předem daného fondu Neutrálních Jednotek (posilovací fond = číslo v závorkách v tabulce níže).\n"
-"  \\item Na začátku 2. kola Boje a každého následujícího kola posilují zbývající armádu 2 jednotky z promíchaného posilovacího fondu (až do maxima 5 jednotek), aby pokračovaly v boji, dokud hráč neustoupí nebo dokud nejsou všechny Neutrální Jednotky z posilovacího fondu zabity. \\textit{Pokud je počet nepřátelských jednotek na začátku kola 1 nebo nižší, doplňte až do celkového počtu 4 jednotek (tj. na desce jsou vždy 4 nebo 5 nepřátelských Jednotek po posílení, pokud jsou k dispozici).}\n"
-"  \\item Umístěte posilující jednotky na nepřátelskou základní linii, začněte zleva s nejnižší iniciativou (nejprve \\svg{unit_ranged} jednotky). Pokud je to nutné, pokračujte na další řadu ve stejném pořadí.\n"
-"  \\item Když hráč ustoupí, nepřátelská armáda doplní až do \\uv{minimálního} počtu 4 jednotek a tyto Jednotky si vezme jako výchozí do dalšího Boje.\n"
+"  \\item Na začátku 2. Kola Boje a každého následujícího Kola posilují zbývající armádu 2 Jednotky z promíchaného posilovacího fondu (až do maxima 5 Jednotek), aby pokračovaly v boji, dokud hráč neustoupí nebo dokud nejsou všechny Neutrální Jednotky z posilovacího fondu zabity. \\textit{Pokud je počet nepřátelských Jednotek na začátku Kola 1 nebo nižší, doplňte až do celkového počtu 4 Jednotek (tj. na desce jsou vždy 4 nebo 5 nepřátelských Jednotek po posílení, pokud jsou k dispozici).}\n"
+"  \\item Umístěte posilující Jednotky na nepřátelskou základní linii, začněte zleva s nejnižší iniciativou (nejprve \\svg{unit_ranged} Jednotky). Pokud je to nutné, pokračujte na další řadu ve stejném pořadí.\n"
+"  \\item Když hráč ustoupí, nepřátelská armáda doplní až do \\uv{minimálního} počtu 4 Jednotek a tyto Jednotky si vezme jako výchozí do dalšího Boje.\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -723,5 +723,5 @@ msgid ""
 "Always 1 Unit of Azure Dragons (starting Units of Boss Army). The rest is "
 "random\\label{azure}."
 msgstr ""
-"Vždy 1 jednotka Azurových Draků (výchozí jednotky Armády Bosse). Zbytek je "
+"Vždy 1 Jednotka Azurových Draků (výchozí Jednotky Armády Bosse). Zbytek je "
 "náhodný\\label{azure}."
