--- a/translations/the_hunt.tex/cs.po
+++ b/translations/the_hunt.tex/cs.po
@@ -52,8 +52,8 @@ msgid ""
 msgstr ""
 "\\textbf{Počáteční Jednotky:}\n"
 "\\begin{itemize}\n"
-"  \\item Skupinu \\svgunit{bronze} jednotek s \\textit{nejnižšími} náklady na Verbování\n"
-"  \\item Málo \\svgunit{bronze} jednotek s \\textit{nejvyššími} náklady na Verbování\n"
+"  \\item Skupinu \\svgunit{bronze} Jednotek s \\textit{nejnižšími} náklady na Verbování\n"
+"  \\item Málo \\svgunit{bronze} Jednotek s \\textit{nejvyššími} náklady na Verbování\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -126,7 +126,7 @@ msgid ""
 "During this Scenario:\n"
 "\n"
 msgstr ""
-"Během tohoto scénáře:\n"
+"Během tohoto Scénáře:\n"
 "\n"
 
 #.  !TeX spellcheck = en_US
@@ -240,7 +240,7 @@ msgid ""
 "Take the following Map Tiles and arrange them as shown in the Scenario map layout.\n"
 "\n"
 msgstr ""
-"Vezměte následující Dílky Mapy a uspořádejte je, jak je uvedeno ve scénáři:\n"
+"Vezměte následující Dílky Mapy a uspořádejte je, jak je uvedeno ve Scénáři:\n"
 "\n"
 
 #. type: multicols*
@@ -330,7 +330,7 @@ msgid ""
 "\n"
 msgstr ""
 "\\subsection*{\\MakeUppercase{Podmínky Porážky}}\n"
-"Pokud Dračí Boss stále žije na konci 14. kola, všichni hráči prohrávají scénář.\n"
+"Pokud Dračí Boss stále žije na konci 14. Kola, všichni hráči prohrávají Scénář.\n"
 "\n"
 
 #. type: multicols*
@@ -343,7 +343,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{4., 8. a 12. kolo:}\n"
+"\\textbf{4., 8. a 12. Kolo:}\n"
 "\\begin{itemize}\n"
 "  \\item Odstraňte všechny Černé Kostičky ze všech Vodních Kol, Větrných Mlýnů a Mystických Zahrad na mapě.\n"
 "\\end{itemize}\n"
@@ -359,7 +359,7 @@ msgid ""
 "Before the start of this Scenario:\n"
 "\n"
 msgstr ""
-"Před začátkem tohoto scénáře:\n"
+"Před začátkem tohoto Scénáře:\n"
 "\n"
 
 #. type: multicols*
@@ -517,15 +517,15 @@ msgstr ""
 "tahu náhodně vyberte kartu z promíchané hromádky odhozených artefaktů. Pokud "
 "je artefakt: \\begin{itemize} \\item Zbraň: Drak získá jeden Dechový útok, "
 "který zasáhne tři Jednotky v řadě. Jednotka přímo zasažená uprostřed utrpí "
-"plné poškození, zatímco jednotky po obou stranách utrpí o 3\\,\\svg{damage-"
+"plné poškození, zatímco Jednotky po obou stranách utrpí o 3\\,\\svg{damage-"
 "red} méně. \\item Kus brnění, štítu nebo oblečení: Drak získá 3\\,"
 "\\svg{defense}, což je znázorněno náhradními Kostičkami Frakce. Odstraňte "
 "je poté, co absorbují poškození. \\item Cetka: Azurový Drak zařve a přivolá "
 "ledovou bouři, která způsobí, že všechny bytosti zamrznou strachem. To má za "
-"následek, že každá jednotka se pohybuje pouze o 1 bojový dílek za kolo, "
+"následek, že každá Jednotka se pohybuje pouze o 1 bojový dílek za Kolo, "
 "zatímco Azurový Drak může letět na jakýkoli dílek na bojové desce. "
 "\\end{itemize} \\item Azurový Drak je imunní vůči všem kouzlům seslaným "
-"proti němu. \\item Posílení a vylepšení seslaná na jednotky hráče zůstávají "
+"proti němu. \\item Posílení a vylepšení seslaná na Jednotky hráče zůstávají "
 "účinná. \\end{itemize} }"
 
 #. type: Plain text
@@ -633,7 +633,7 @@ msgstr ""
 "\\begin{enumerate} \\item Umístěte miniaturu/kartu Krystalového Draka na "
 "bojiště. Ignorujte jeho schopnost. \\item Umístěte dva Zlaté Golemy a dva "
 "Diamantové Golemy na bojiště. \\end{enumerate} \\medskip \\textbf{Pravidla:} "
-"\\begin{itemize} \\item Na začátku každého bojového kola zkontrolujte, zda "
+"\\begin{itemize} \\item Na začátku každého Kola Boje zkontrolujte, zda "
 "byli v předchozím kole odstraněni nějací Golemové. Pokud ano, vyvolejte "
 "jednoho nového Diamantového nebo Zlatého Golema (vybraného náhodně) do "
 "poslední řady bojiště. \\item \\textit{Požírání Golemů:} Krystalový Drak "
@@ -647,7 +647,7 @@ msgstr ""
 "Golemové nemají žádné další schopnosti nad rámec těch, které jsou uvedeny na "
 "jejich kartách. Slouží především jako potrava pro regeneraci zdraví "
 "Krystalového Draka. \\item Krystalový Drak má \\textit{Odvetný útok dvakrát} "
-"za bojové kolo. \\end{itemize} }"
+"za bojové Kolo. \\end{itemize} }"
 
 #. type: Plain text
 #: clash/the_hunt.tex:235
@@ -754,18 +754,18 @@ msgstr ""
 "cíle a zároveň způsobit další poškození. } \\medskip \\\\ \\textbf{Boj s "
 "Rezavým Drakem:} \\begin{enumerate} \\item Umístěte miniaturu/kartu Rezavého "
 "Draka na bojiště. Ignorujte jeho schopnost. \\item Připravte čtyři náhradní "
-"karty balíčku M\\&M k označení kaluží kyseliny. \\end{enumerate} \\medskip "
+"karty Balíčku M\\&M k označení kaluží kyseliny. \\end{enumerate} \\medskip "
 "\\textbf{Pravidla:} \\begin{itemize} \\item Rezavý Drak je imunní vůči "
 "základním kouzlům. \\item \\textit{Korozivní Zvratky:} Rezavý Drak má mocnou "
 "schopnost kontroly davu, která mu umožňuje vypustit čtyři kaluže sirné "
-"kyseliny na bojiště \\textit{na začátku} každého bojového kola. Použijte "
-"karty balíčku M\\&M umístěné lícem dolů k označení jejich poloh. \\item "
+"kyseliny na bojiště \\textit{na začátku} každého Kola Boje. Použijte "
+"karty Balíčku M\\&M umístěné lícem dolů k označení jejich poloh. \\item "
 "Rezavý Drak nemůže umístit kaluže na stejná Pole jako v předchozím kole. "
 "Označte Pole náhradními Kostičkami Frakce, abyste označili, kde byly kaluže "
 "umístěny. \\item Kaluže sirné kyseliny blokují Pole bojiště a brání pohybu "
-"pouze na jedno kolo. Slouží jako překážky jak pro hráče, tak pro Draka. "
+"pouze na jedno Kolo. Slouží jako překážky jak pro hráče, tak pro Draka. "
 "\\item Pasivní schopnost Rezavého Draka, \\textit{Koroze}, snižuje brnění "
-"nepřátelské jednotky o 2 při každém útoku. Na kartu jednotky umístěte "
+"nepřátelské Jednotky o 2 při každém útoku. Na kartu Jednotky umístěte "
 "náhradní Kostičku Frakce, abyste označili tento efekt. Koroze se kumuluje až "
 "do -4 \\svg{defense}. \\end{itemize} }"
 
@@ -881,15 +881,15 @@ msgstr ""
 "Zrcadlo kouzel je jednou z jejich přirozených obranných vlastností. } "
 "\\medskip \\\\ \\textbf{Boj s Pohádkovým Drakem:} \\begin{enumerate} \\item "
 "Umístěte 2 karty Pohádkového Draka na bojiště. Ignorujte jejich schopnosti. "
-"\\item Umístěte 1 kartu Dendroida z \\svg{silver} balíčku neutrálních "
-"jednotek na bojiště a umístěte 3 další karty lícem dolů, aby představovaly "
+"\\item Umístěte 1 kartu Dendroida z \\svg{silver} Balíčku neutrálních "
+"Jednotek na bojiště a umístěte 3 další karty lícem dolů, aby představovaly "
 "další 3 Dendroidy. \\end{enumerate} \\medskip \\textbf{Pravidla:} "
 "\\begin{itemize} \\item Pohádkový Drak je imunní vůči základním kouzlům. "
-"\\item Pohádkový Drak může seslat až dvě různá kouzla za bojové kolo. \\item "
+"\\item Pohádkový Drak může seslat až dvě různá kouzla za Kolo Boje. \\item "
 "Všechna kouzla jsou viditelně zobrazena vedle Desky Bojiště: "
 "\\begin{enumerate} \\item První kouzlo je \\textit{Blesk}. \\item Druhé "
 "kouzlo je \\textit{Léčení}. \\item Pro třetí kouzlo Pohádkový Drak náhodně "
-"vybere expertní kouzlo z balíčku kouzel, s výjimkou kouzel Mapa \\svg{map}. "
+"vybere expertní kouzlo z Balíčku kouzel, s výjimkou kouzel Mapa \\svg{map}. "
 "Pokud je vybráno kouzlo Mapa \\svg{map}, vytáhněte další kouzlo. "
 "\\end{enumerate} \\item \\textit{Šprýmař:} V prvním kole bitvy je první "
 "zacílený Pohádkový Drak pouhým Přeludem. Způsobuje poškození, ale zmizí z "
