--- a/translations/what_to_play.tex/cs.po
+++ b/translations/what_to_play.tex/cs.po
@@ -45,7 +45,7 @@ msgid ""
 "Follow these suggestions if you're not sure which Scenario is best for you.\n"
 "\n"
 msgstr ""
-"Můžete se řídit těmito návrhy, pokud si nejste jisti, který scénář je pro vás nejlepší.\n"
+"Můžete se řídit těmito návrhy, pokud si nejste jisti, který Scénář je pro vás nejlepší.\n"
 "\n"
 
 #. type: multicols
@@ -101,7 +101,7 @@ msgid ""
 "For an inevitable epic battle between two players with a possible siege, play \\pagelink{Dragoncurse Castle}{Dragoncurse Castle}.\n"
 "\n"
 msgstr ""
-"Pokud byste chtěli hrát scénář \\uv{ukořistění Grálu} pro 2 nebo 4 hráče se zajímavými zvraty, zkuste \\pagelink{Krvavý Grál}{Krvavý Grál}.\n"
+"Pokud byste chtěli hrát Scénář \\uv{ukořistění Grálu} pro 2 nebo 4 hráče se zajímavými zvraty, zkuste \\pagelink{Krvavý Grál}{Krvavý Grál}.\n"
 "Pro vzrušující boj s bossem pro 2--3 hráče si vyberte \\pagelink{Lov}{Lov}.\n"
 "Pro nevyhnutelnou epickou bitvu mezi dvěma hráči s možným obléháním hrajte \\pagelink{Hrad Dračí Kletby}{Hrad Dračí Kletby}.\n"
 "\n"
