--- a/translations/titans_stronghold.tex/cs.po
+++ b/translations/titans_stronghold.tex/cs.po
@@ -263,7 +263,7 @@ msgid ""
 "Take the following Map Tiles and arrange them as shown in the Scenario map layout ($P$ stands for the number of players):\n"
 "\n"
 msgstr ""
-"Vezměte následující Dílky Mapy a uspořádejte je, jak je uvedeno ve scénáři ($H$ znamená počet hráčů):\n"
+"Vezměte následující Dílky Mapy a uspořádejte je, jak je uvedeno ve Scénáři ($H$ znamená počet hráčů):\n"
 "\n"
 
 #. type: multicols*
@@ -356,7 +356,7 @@ msgid ""
 "Kill all Units in the Titans' Stronghold (the center of Tile VI--VII next to Tiles I).\n"
 "\n"
 msgstr ""
-"Zabijte všechny jednotky v Pevnosti Titánů (střed dílku VI--VII vedle dílků I).\n"
+"Zabijte všechny Jednotky v Pevnosti Titánů (střed dílku VI--VII vedle dílků I).\n"
 "\n"
 
 #. type: multicols*
@@ -369,7 +369,7 @@ msgid ""
 "There are undefeated Units left in the Titans' Stronghold at the end of Round 16 (15 on Impossible difficulty).\n"
 "\n"
 msgstr ""
-"Na konci 16. kola (15. na Nemožné obtížnosti) zůstanou v Pevnosti Titánů neporažené jednotky.\n"
+"Na konci 16. Kola (15. na Nemožné obtížnosti) zůstanou v Pevnosti Titánů neporažené Jednotky.\n"
 "\n"
 
 #. type: multicols*
@@ -382,7 +382,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{4., 8. a 12. kolo:}\n"
+"\\textbf{4., 8. a 12. Kolo:}\n"
 "\\begin{itemize}\n"
 "  \\item Odstraňte všechny Černé Kostičky ze všech Větrných Mlýnů, Vodních Kol a Mystických Zahrad na mapě.\n"
 "\\end{itemize}\n"
@@ -470,9 +470,9 @@ msgstr ""
 "  \\item Svůj Stavební Žeton můžete použít k předání svých surovin jinému hráči.\n"
 "  \\item Dva hráči mohou použít své Stavební Žetony k výměně Artefaktů a/nebo Kouzel.\n"
 "  \\item Kdykoliv hráč navštíví Obelisk, hodí si jednou Kostkou Pokladu, jednou Kostkou Surovin a vyřeší jednu z nich.\n"
-"  \\item Když jsou všechny dílky VII (s výjimkou Pevnosti Titánů) obsazeny, náhodně vytáhněte a zamíchejte určený počet (viz další strana) karet Neutrálních Jednotek z odpovídajících balíčků, abyste vytvořili samostatný balíček Neutrálních Jednotek pro Pevnost Titánů (balíček Pevnosti Titánů je někdy rozdělen na dvě části, protože určité scénáře by jinak nebylo možné s kartami z určitých rozšíření implementovat).\n"
-"  \\item Kdykoliv Hrdina vstoupí do Pevnosti Titánů, vytáhne 5 karet z balíčku Pevnosti Titánů místo z balíčků karet Neutrálních Jednotek. Jednotky jsou umístěny na Desku Bojiště (viz \\uv{Rozmístění Neutrálních Jednotek} na str. 29 v základních pravidlech). Hráči se pokoušejí porazit Jednotky, které najdou v Pevnosti Titánů. Jakékoliv Neutrální Jednotky poražené během boje v Pevnosti Titánů jsou vráceny do svých příslušných balíčků Neutrálních Jednotek místo do balíčku Pevnosti Titánů. Jakékoliv Neutrální Jednotky, které přežijí boj v Pevnosti Titánů jsou zamíchány zpět do balíčku Pevnosti Titánů. Pokud v tomto balíčku není dostatek karet Jednotek, vytáhněte tolik karet Jednotek, kolik je k dispozici, a umístěte je na Desku Bojiště.\n"
-"  \\item Boj v Pevnosti Titánů nyní stojí 1 BP za prodloužení o další kolo Boje, stejně jako boj proti Jednotkám nižší než Azurové úrovně.\n"
+"  \\item Když jsou všechny dílky VII (s výjimkou Pevnosti Titánů) obsazeny, náhodně vytáhněte a zamíchejte určený počet (viz další strana) karet Neutrálních Jednotek z odpovídajících Balíčků, abyste vytvořili samostatný Balíček Neutrálních Jednotek pro Pevnost Titánů (Balíček Pevnosti Titánů je někdy rozdělen na dvě části, protože určité Scénáře by jinak nebylo možné s kartami z určitých rozšíření implementovat).\n"
+"  \\item Kdykoliv Hrdina vstoupí do Pevnosti Titánů, vytáhne 5 karet z Balíčku Pevnosti Titánů místo z Balíčků karet Neutrálních Jednotek. Jednotky jsou umístěny na Desku Bojiště (viz \\uv{Rozmístění Neutrálních Jednotek} na str. 29 v základních pravidlech). Hráči se pokoušejí porazit Jednotky, které najdou v Pevnosti Titánů. Jakékoliv Neutrální Jednotky poražené během boje v Pevnosti Titánů jsou vráceny do svých příslušných Balíčků Neutrálních Jednotek místo do Balíčku Pevnosti Titánů. Jakékoliv Neutrální Jednotky, které přežijí boj v Pevnosti Titánů jsou zamíchány zpět do Balíčku Pevnosti Titánů. Pokud v tomto Balíčku není dostatek karet Jednotek, vytáhněte tolik karet Jednotek, kolik je k dispozici, a umístěte je na Desku Bojiště.\n"
+"  \\item Boj v Pevnosti Titánů nyní stojí 1 BP za prodloužení o další Kolo Boje, stejně jako boj proti Jednotkám nižší než Azurové úrovně.\n"
 "  \\item Navíc žádný hráč nemůže:\n"
 "  \\begin{itemize}\n"
 "    \\item Útočit na jiné Hrdiny.\n"
